Cleanup/performance: - Reduced delay on hover word to 200ms (still avoids excessive calls but doesn't lead to noticeable lag) - Removed some whitespace in default.xsl template - Removed javascript:void() from hrefs - Added returns for promises (in case that is preferred to success callback)

--- a/step-web/src/main/webapp/css/passage.css
+++ b/step-web/src/main/webapp/css/passage.css
@@ -245,7 +245,7 @@ span.strongs a {
 }
 
 
-SUP.verseNumber {
+sup.verseNumber {
 	font-size: 75%;
 	color: gray;
 }
@@ -255,19 +255,18 @@ sup.variant.note {
 	color: #33339F;
 }
 
-SUP.note a {
+sup.note a {
+	cursor: pointer;
 	font-size: 100%;
     font-weight:normal;
 	color: #26539e;
 }
 
-sup.note a:hover,
-sup.note a:focus,
-sup.note a:visited {
+sup.note a:hover {
 	text-decoration: none;
 }
 
-SUP.note a:visited {
+sup.note a:visited {
 	font-size: 100%;
     font-weight:normal;
 	color: #26539e;
@@ -450,16 +449,13 @@ h3.psalmHeading .note {
 
 a.linkRef {
 	color: #26539e;
+	cursor: pointer;
 	font-weight: normal;
-	front-size: smaller;
 }
 
 a:hover.linkRef {
 	color: #33339F;	
-	font-weight: normal;
-	front-size: smaller;
 }
-
 
 /* the following are for dictionary entries */
 FONT.orth {
